--- a/Candidat_MS/src/main/resources/application.properties
+++ b/Candidat_MS/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 #Eureka client config
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 spring.config.import=optional:configserver:http://localhost:8888
-spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.profile=dev
 
