--- a/ConfigServer/pom.xml
+++ b/ConfigServer/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit</groupId>
 	<artifactId>ConfigServer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>ConfigServer</name>
 	<description>ConfigServer</description>
 	<url/>
