--- a/DiscoveryServer/pom.xml
+++ b/DiscoveryServer/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>DiscoveryServer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>DiscoveryServer</name>
     <description>DiscoveryServer</description>
     <url/>
