--- a/Quiz_MS/pom.xml
+++ b/Quiz_MS/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>Quiz_MS</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>Quiz_MS</name>
     <description>Quiz_MS</description>
     <url/>
