config server + Dockerfiles + docker-compose.yml

--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=ConfigServer
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/Mahdi1920/config.git
-
-
+#spring.cloud.config.server.git.default-label=master
