--- a/Candidat_MS/src/main/resources/application.properties
+++ b/Candidat_MS/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=CandidatMS
 spring.config.import=optional:configserver:http://localhost:8888
 #spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.import-check.enabled=false
+#spring.cloud.config.enabled=false
