--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ConfigServer
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/Mahdi1920/config.git
-#spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.uri=${GIT_URI}
+spring.cloud.config.server.git.username=${GIT_USERNAME}
+spring.cloud.config.server.git.password=${GIT_TOKEN}
