--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "8888:8888"
     env_file:
-      - .env
+      - ConfigServer/.env
     environment:
       - spring_cloud_config_server_git_uri=${GIT_URI}
       - spring_cloud_config_server_git_username=${GIT_USERNAME}
