--- a/Quiz_MS/src/main/resources/application.properties
+++ b/Quiz_MS/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=QuizMS
-#spring.cloud.config.uri=http://localhost:8888
-spring.config.import=optional:configserver:http://localhost:8888
-#spring.cloud.config.enabled=false
+#spring.config.import=configserver:http://localhost:8888
+spring.profiles.active=dev
+#spring.profiles.active=prod
