--- a/Candidat_MS/src/main/resources/application.properties
+++ b/Candidat_MS/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=CandidatMS
-#spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:http://localhost:8888
 spring.profiles.active=dev
 #spring.profiles.active=prod
