--- a/GatewayAPI/src/main/resources/application.properties
+++ b/GatewayAPI/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.cloud.discovery.enabled=true
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled= true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.security.oauth2.resourceserver.jwt.issuer-uri= http://localhost:8080/realms/MyRealm
+spring.security.oauth2.client.provider.keycloak.issuer-uri= http://localhost:8080/realms/MyRealm
+spring.security.oauth2.client.registration.gateway-api.provider=keycloak
+spring.security.oauth2.client.registration.gateway-api.client-id=gateway-api
+spring.security.oauth2.client.registration.gateway-api.client-secret=<CLIENT_SECRET>
+spring.security.oauth2.client.registration.gateway-api.authorization-grant-type=client_credentials
