--- a/Candidat_MS/pom.xml
+++ b/Candidat_MS/pom.xml
@@ -10,7 +10,8 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>Candidat_MS</artifactId>
-    <version>0.0.1</version>
+<!--    <version>0.0.1</version>-->
+    <version>0.0.2</version>
     <name>Candidat_MS</name>
     <description>Candidat_MS</description>
     <url/>
@@ -46,7 +47,7 @@
         <dependency>
             <groupId>tn.starter</groupId>
             <artifactId>MysqlShared</artifactId>
-            <version>1.0</version>
+            <version>2.0</version>
         </dependency>
 
         <dependency>
@@ -85,6 +86,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.kafka</groupId>-->
+<!--            <artifactId>spring-kafka</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.kafka</groupId>-->
+<!--            <artifactId>spring-kafka-test</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
     </dependencies>
 
