--- a/Quiz_MS/pom.xml
+++ b/Quiz_MS/pom.xml
@@ -10,7 +10,8 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>Quiz_MS</artifactId>
-    <version>0.0.1</version>
+<!--    <version>0.0.1</version>-->
+    <version>0.0.2</version>
     <name>Quiz_MS</name>
     <description>Quiz_MS</description>
     <url/>
@@ -46,7 +47,7 @@
         <dependency>
             <groupId>tn.starter</groupId>
             <artifactId>MongoShared</artifactId>
-            <version>1.0</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -65,6 +66,15 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
