kafka without keycloak jar1.0

--- a/Candidat_MS/src/main/resources/application.properties
+++ b/Candidat_MS/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=CandidatMS
 spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.openfeign.circuitbreaker.enabled=true
 spring.profiles.active=dev
 #spring.profiles.active=prod
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.acks=all
