--- a/Quiz_MS/src/main/resources/application.properties
+++ b/Quiz_MS/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=QuizMS
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
 #spring.profiles.active=prod
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.acks=all
